# Copyright (c) 2016, the Dart project authors.  Please see the AUTHORS file
# for details. All rights reserved. Use of this source code is governed by a
# BSD-style license that can be found in the LICENSE file.

import("build/config/gclient_args.gni")
import("sdk_args.gni")

# This target will be built if no target is specified when invoking ninja.
group("default") {
  deps = [ ":runtime" ]
}

group("most") {
  deps = [
    ":analysis_server",
    ":create_sdk",
    ":dart2js",
    ":dartanalyzer",
    ":ddc",
    ":runtime",
  ]
}

group("runtime") {
  import("runtime/runtime_args.gni")

  deps = [
    "runtime/bin:dart",
    "runtime/bin:dartvm",
    "runtime/bin:ffi_test_dynamic_library",
    "runtime/bin:ffi_test_functions",
    "runtime/bin:process_test",
    "runtime/bin:run_vm_tests",
    "runtime/vm:kernel_platform_files($host_toolchain)",
    "samples/embedder:kernel",
    "samples/ffi/http:fake_http",
    "samples/ffi/httpIG:fake_httpIG",
    "utils/kernel-service",
  ]

  # The following dependencies allow dartdev to start the resident frontend
  # server and DDS.
  if (dart_target_arch != "ia32" && dart_target_arch != "x86") {
    deps += [
      "runtime/bin:dartaotruntime",
      "runtime/bin:dartaotruntime_product",
      "utils/dart_runtime_service_vm",
      "utils/dart_runtime_service_vm:dart_runtime_service_vm_aot_snapshot",
      "utils/dartdev:dartdev_aot_snapshot",
      "utils/dds:dds_aot",
      "utils/dtd:dtd_aot",
      "utils/kernel-service:frontend_server_aot_product",
    ]
  } else {
    deps += [
      "utils/dart_runtime_service_vm",
      "utils/dartdev",
      "utils/dds",
      "utils/dtd",
      "utils/kernel-service:frontend_server",
    ]
  }

  # AOT samples use dlopen to load AOT snapshots and it works only on
  # 64-bit Linux right now.
  if ((is_linux || is_mac) &&
      (dart_target_arch == "x64" || dart_target_arch == "arm64")) {
    deps += [ "samples/embedder:aot" ]
  }

  if (!is_win) {
    # The test isn't run on windows
    deps += [ "runtime/bin:entrypoints_verification_test" ]
  }

  # This flag is set in runtime/runtime_args.gni
  # The analyze_snapshot tool is only supported on 64 bit AOT builds running
  # under linux and android platforms
  if (build_analyze_snapshot) {
    deps += [
      # The `analyze_snapshot` tests require the `analyze_snapshot` as well as
      # `gen_snapshot` binaries.
      "runtime/bin:analyze_snapshot",
      "runtime/bin:analyze_snapshot($host_toolchain)",
      "runtime/bin:gen_snapshot",
      "runtime/bin:gen_snapshot($host_toolchain)",
    ]
  }

  if (is_linux || is_android) {
    deps += [ "runtime/bin:abstract_socket_test" ]
  } else if (is_fuchsia) {
    deps += [ ":fuchsia_test_package" ]
  } else if (is_win) {
    deps += [ "runtime/bin:create_process_test_helper" ]
  }
}

# A separate target and not included in group("runtime"). This way the target\
# "runtime" does not get many executables extra as build output.
group("run_ffi_unit_tests") {
  deps = [ "runtime/bin/ffi_unit_test:run_ffi_unit_tests" ]
}

group("runtime_precompiled") {
  import("runtime/runtime_args.gni")
  deps = [
    "runtime/bin:dartaotruntime",
    "runtime/bin:gen_snapshot",
    "runtime/bin:gen_snapshot($host_toolchain)",
    "runtime/bin:process_test",
    "runtime/vm:kernel_platform_files($host_toolchain)",
  ]
  if (is_linux || is_android) {
    deps += [ "runtime/bin:abstract_socket_test" ]
  }
  if (dart_dynamic_modules) {
    deps += [ "utils/dart2bytecode:dart2bytecode_snapshot" ]
    deps += [ "utils/modular_aot_compiler:modular_aot_compiler_snapshot" ]
    deps += [ "utils/dynamic_module_runner:dynamic_module_runner_snapshot" ]
  }
}

group("create_sdk") {
  public_deps = [ "sdk:create_sdk" ]
}

group("dart2js") {
  import("runtime/runtime_args.gni")
  if (dart_target_arch != "ia32" && dart_target_arch != "x86") {
    deps = [
      ":runtime_precompiled",
      "utils/compiler:dart2js_sdk_aot",
    ]
  } else {
    deps = [ "utils/compiler:dart2js" ]
  }
}

group("dart2wasm_platform") {
  deps = [
    ":runtime_precompiled",
    "utils/dart2wasm:dart2wasm_js_compatibility_platform",
    "utils/dart2wasm:dart2wasm_platform",
    "utils/dart2wasm:dart2wasm_snapshot",
    "utils/dart2wasm:dart2wasm_standalone_platform",
  ]
  if (defined(is_product)) {
    if (is_product) {
      deps += [ "utils/dart2wasm:dart2wasm_product_snapshot" ]
    } else {
      deps += [ "utils/dart2wasm:dart2wasm_asserts_snapshot" ]
    }
  }
}

group("dart2wasm") {
  deps = [
    ":dart2wasm_platform",
    "utils/dart2wasm:test_wasm_modules",
  ]
}

group("dart2wasm_benchmark") {
  deps = [
    ":dart2wasm_platform",
    "third_party/binaryen:wasm-opt",
  ]
}

group("dartanalyzer") {
  deps = [ "utils/dartanalyzer" ]
}

group("ddc") {
  import("runtime/runtime_args.gni")
  if (dart_target_arch != "ia32" && dart_target_arch != "x86") {
    deps = [
      ":runtime_precompiled",
      "utils/bazel:kernel_worker_aot",
      "utils/ddc:dartdevc_aot",
    ]
  } else {
    deps = [
      "utils/bazel:kernel_worker",
      "utils/ddc:dartdevc",
    ]
  }
}

group("dartpad") {
  deps = [ "utils/dartpad" ]
}

group("analysis_server") {
  deps = [ "utils/analysis_server" ]
}

group("tools") {
  deps = [
    "utils:bootstrap_compile_platform.exe",
    "utils:bootstrap_gen_kernel.exe",
  ]
}

# This is the target that is built on the dart2js build bots.
# It must depend on anything that is required by the dart2js
# test suites.
group("dart2js_bot") {
  deps = [ "sdk:create_most_sdk" ]
}

group("dart2wasm_bot") {
  deps = [
    "sdk:create_most_sdk",
    "utils/dart2wasm:test_wasm_modules",
  ]
}

group("front-end_bot") {
  deps = [ "sdk:create_most_sdk" ]
}

group("analyzer_bot") {
  deps = [
    "sdk:create_most_sdk",
    "utils/dartanalyzer",
  ]
}

group("benchmark_bot") {
  deps = [
    ":dart2wasm_benchmark",
    "runtime/bin:run_vm_tests",
    "sdk:create_most_sdk",
    "utils/ddc:ddc_canary_test",
    "utils/ddc:ddc_stable_test",
    "utils/kernel-service",
  ]
}

group("pkg_bot") {
  deps = [
    ":create_sdk",
    ":dartpad",
  ]
}

group("android_bot") {
  deps = [
    "runtime/bin:abstract_socket_test",
    "runtime/bin:dartaotruntime",
    "runtime/bin:dartvm",
    "runtime/bin:ffi_test_dynamic_library",
    "runtime/bin:ffi_test_functions",
    "runtime/bin:gen_snapshot($host_toolchain)",
    "runtime/bin:process_test",
    "runtime/bin:run_vm_tests",
    "samples/ffi/http:fake_http",
    "samples/ffi/httpIG:fake_httpIG",
  ]
}

group("dartfuzz") {
  deps = [
    "runtime/bin:dartaotruntime",
    "runtime/bin:dartvm",
    "utils/compiler:dart2js_platform",
    "utils/dart2wasm:dart2wasm_platform",
    "utils/kernel-service",
  ]
}

group("iso_stress") {
  deps = [
    "runtime/bin:dartaotruntime",
    "runtime/bin:dartvm",
    "runtime/bin:ffi_test_dynamic_library",
    "runtime/bin:ffi_test_functions",
    "runtime/bin:process_test",
  ]
}

if (is_fuchsia) {
  import("third_party/fuchsia/gn-sdk/src/component.gni")
  import("third_party/fuchsia/gn-sdk/src/package.gni")
  import("utils/aot_snapshot.gni")
  import("utils/application_snapshot.gni")

  # TODO(b/399714829): Test packages should be created at test-time, not
  # build-time.

  # tests/ffi/**_test.dart except those with compile-time errors
  ffi_test_sources = [
    "tests/ffi/abi_specific_int_test.dart",
    "tests/ffi/abi_test.dart",
    "tests/ffi/address_of_array_generated_test.dart",
    "tests/ffi/address_of_cast_test.dart",
    "tests/ffi/address_of_struct_generated_test.dart",
    "tests/ffi/address_of_test.dart",
    "tests/ffi/address_of_typeddata_generated_test.dart",
    "tests/ffi/aliasing_test.dart",
    "tests/ffi/allocator_test.dart",
    "tests/ffi/array_compound_elements_test.dart",
    "tests/ffi/array_primitive_elements_generated_test.dart",
    "tests/ffi/async_void_function_callbacks_test.dart",
    "tests/ffi/bool_test.dart",
    "tests/ffi/c_types_test.dart",
    "tests/ffi/callback_unwind_error_test.dart",
    "tests/ffi/calloc_test.dart",
    "tests/ffi/data_not_asan_test.dart",
    "tests/ffi/data_test.dart",
    "tests/ffi/deeply_immutable_c_api_finalizer_test.dart",
    "tests/ffi/dl_api_exit_enter_isolate_test.dart",
    "tests/ffi/dylib_close_test.dart",
    "tests/ffi/dylib_isolates_test.dart",
    "tests/ffi/dylib_open_test.dart",
    "tests/ffi/exceptional_return_const_test.dart",
    "tests/ffi/expando_test.dart",
    "tests/ffi/extension_methods_test.dart",
    "tests/ffi/external_typed_data_finalizer_test.dart",
    "tests/ffi/external_typed_data_test.dart",
    "tests/ffi/ffi_callback_unique_test.dart",
    "tests/ffi/ffi_induce_a_crash_test.dart",
    "tests/ffi/ffi_native_test.dart",
    "tests/ffi/finalizer_external_size_accounting_test.dart",
    "tests/ffi/function_callbacks_isolate_ownership_test.dart",
    "tests/ffi/function_callbacks_leaf_test.dart",
    "tests/ffi/function_callbacks_many_test.dart",
    "tests/ffi/function_callbacks_structs_by_value_generated_test.dart",
    "tests/ffi/function_callbacks_structs_by_value_native_callable_generated_test.dart",
    "tests/ffi/function_callbacks_structs_by_value_test.dart",
    "tests/ffi/function_callbacks_subtype_test.dart",
    "tests/ffi/function_callbacks_test.dart",
    "tests/ffi/function_callbacks_varargs_generated_test.dart",
    "tests/ffi/function_callbacks_varargs_native_callable_generated_test.dart",
    "tests/ffi/function_callbacks_very_many_test.dart",
    "tests/ffi/function_struct_by_value_out_of_bounds_test.dart",
    "tests/ffi/function_structs_by_value_generated_args_leaf_test.dart",
    "tests/ffi/function_structs_by_value_generated_args_native_leaf_test.dart",
    "tests/ffi/function_structs_by_value_generated_args_native_test.dart",
    "tests/ffi/function_structs_by_value_generated_args_test.dart",
    "tests/ffi/function_structs_by_value_generated_compounds_sizeof_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_arg_leaf_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_arg_native_leaf_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_arg_native_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_arg_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_leaf_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_native_leaf_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_native_test.dart",
    "tests/ffi/function_structs_by_value_generated_ret_test.dart",
    "tests/ffi/function_structs_test.dart",
    "tests/ffi/function_test.dart",
    "tests/ffi/function_varargs_generated_leaf_test.dart",
    "tests/ffi/function_varargs_generated_native_leaf_test.dart",
    "tests/ffi/function_varargs_generated_native_test.dart",
    "tests/ffi/function_varargs_generated_test.dart",
    "tests/ffi/function_varargs_name_test.dart",
    "tests/ffi/function_varargs_test.dart",
    "tests/ffi/function_very_many_test.dart",
    "tests/ffi/hardfp_test.dart",
    "tests/ffi/has_symbol_test.dart",
    "tests/ffi/inline_array_multi_dimensional_test.dart",
    "tests/ffi/inline_array_test.dart",
    "tests/ffi/inline_array_variable_length_test.dart",
    "tests/ffi/invoke_callback_after_suspension_test.dart",
    "tests/ffi/isolate_group_bound_captured_local_test.dart",
    "tests/ffi/isolate_group_bound_lazy_deopt_test.dart",
    "tests/ffi/isolate_group_bound_send_test.dart",
    "tests/ffi/isolate_local_function_callbacks_test.dart",
    "tests/ffi/many_listener_callbacks_test.dart",
    "tests/ffi/msan_test.dart",
    "tests/ffi/native_assets/asset_absolute_test.dart",
    "tests/ffi/native_assets/asset_executable_test.dart",
    "tests/ffi/native_assets/asset_library_annotation_test.dart",
    "tests/ffi/native_assets/asset_process_test.dart",
    "tests/ffi/native_assets/asset_relative_test.dart",
    "tests/ffi/native_assets/asset_system_test.dart",
    "tests/ffi/native_assets/infer_native_assets_yaml_dart_kernel_snapshot_test.dart",
    "tests/ffi/native_assets/infer_native_assets_yaml_isolate_spawnuri_2_test.dart",
    "tests/ffi/native_assets/infer_native_assets_yaml_isolate_spawnuri_3_test.dart",
    "tests/ffi/native_assets/infer_native_assets_yaml_isolate_spawnuri_test.dart",
    "tests/ffi/native_assets/infer_native_assets_yaml_process_run_test.dart",
    "tests/ffi/native_assets/process_test.dart",
    "tests/ffi/native_callables_async_structs_by_value_generated_test.dart",
    "tests/ffi/native_callables_sync_structs_by_value_generated_test.dart",
    "tests/ffi/native_effect_test.dart",
    "tests/ffi/negative_function_test.dart",
    "tests/ffi/pointer_arithmetic_operators_test.dart",
    "tests/ffi/regress_37254_test.dart",
    "tests/ffi/regress_39044_test.dart",
    "tests/ffi/regress_39063_test.dart",
    "tests/ffi/regress_39885_test.dart",
    "tests/ffi/regress_40537_test.dart",
    "tests/ffi/regress_43016_test.dart",
    "tests/ffi/regress_43693_test.dart",
    "tests/ffi/regress_45189_test.dart",
    "tests/ffi/regress_45198_test.dart",
    "tests/ffi/regress_45507_test.dart",
    "tests/ffi/regress_45988_test.dart",
    "tests/ffi/regress_46004_test.dart",
    "tests/ffi/regress_46127_test.dart",
    "tests/ffi/regress_47594_test.dart",
    "tests/ffi/regress_47673_test.dart",
    "tests/ffi/regress_49402_test.dart",
    "tests/ffi/regress_49684_test.dart",
    "tests/ffi/regress_51315_test.dart",
    "tests/ffi/regress_51321_test.dart",
    "tests/ffi/regress_51504_test.dart",
    "tests/ffi/regress_51538_2_test.dart",
    "tests/ffi/regress_51538_3_test.dart",
    "tests/ffi/regress_51538_test.dart",
    "tests/ffi/regress_52298_test.dart",
    "tests/ffi/regress_52399_test.dart",
    "tests/ffi/regress_56412_2_test.dart",
    "tests/ffi/regress_56412_test.dart",
    "tests/ffi/regress_b_261224444_test.dart",
    "tests/ffi/regress_flutter79441_test.dart",
    "tests/ffi/regress_flutter97301_test.dart",
    "tests/ffi/regress_jump_to_frame_test.dart",
    "tests/ffi/sizeof_test.dart",
    "tests/ffi/snapshot_test.dart",
    "tests/ffi/stacktrace_regress_37910_test.dart",
    "tests/ffi/structs_nested_test.dart",
    "tests/ffi/structs_nnbd_workaround_test.dart",
    "tests/ffi/structs_packed_test.dart",
    "tests/ffi/structs_test.dart",
    "tests/ffi/structs_typed_data_test.dart",
    "tests/ffi/unaligned_test.dart",
    "tests/ffi/variance_function_test.dart",
    "tests/ffi/vmspecific_callback_unwind_error_through_handle_test.dart",
    "tests/ffi/vmspecific_deprecated_funcs_test.dart",
    "tests/ffi/vmspecific_dynamic_library_test.dart",
    "tests/ffi/vmspecific_enable_ffi_test.dart",
    "tests/ffi/vmspecific_ffi_native_handles_test.dart",
    "tests/ffi/vmspecific_ffi_native_test.dart",
    "tests/ffi/vmspecific_function_callbacks_exit_test.dart",
    "tests/ffi/vmspecific_function_callbacks_test.dart",
    "tests/ffi/vmspecific_function_gc_test.dart",
    "tests/ffi/vmspecific_function_test.dart",
    "tests/ffi/vmspecific_handle_dynamically_linked_test.dart",
    "tests/ffi/vmspecific_handle_test.dart",
    "tests/ffi/vmspecific_highmem_32bit_test.dart",
    "tests/ffi/vmspecific_leaf_call_test.dart",
    "tests/ffi/vmspecific_native_finalizer_2_test.dart",
    "tests/ffi/vmspecific_native_finalizer_api_calls_test.dart",
    "tests/ffi/vmspecific_native_finalizer_deeply_immutable_test.dart",
    "tests/ffi/vmspecific_native_finalizer_isolate_groups_test.dart",
    "tests/ffi/vmspecific_native_finalizer_isolates_test.dart",
    "tests/ffi/vmspecific_native_finalizer_test.dart",
    "tests/ffi/vmspecific_object_gc_test.dart",
    "tests/ffi/vmspecific_pointer_load_il_test.dart",
    "tests/ffi/vmspecific_regress_37100_test.dart",
    "tests/ffi/vmspecific_regress_37511_callbacks_test.dart",
    "tests/ffi/vmspecific_regress_37511_test.dart",
    "tests/ffi/vmspecific_regress_37780_test.dart",
    "tests/ffi/vmspecific_regress_51794_test.dart",
    "tests/ffi/vmspecific_send_port_id_test.dart",
  ]

  # tests/standalone/io/**_test.dart except those with compile-time errors
  io_test_sources = [
    "tests/standalone/io/abrupt_close_test.dart",
    "tests/standalone/io/addlatexhash_test.dart",
    "tests/standalone/io/address_lookup_test.dart",
    "tests/standalone/io/ansi_supported_test.dart",
    "tests/standalone/io/arguments_test.dart",
    "tests/standalone/io/async_catch_errors_test.dart",
    "tests/standalone/io/client_socket_add_close_error_test.dart",
    "tests/standalone/io/client_socket_add_close_no_error_test.dart",
    "tests/standalone/io/client_socket_add_close_result_error_test.dart",
    "tests/standalone/io/client_socket_add_destroy_no_error_test.dart",
    "tests/standalone/io/client_socket_destroy_and_add_stream_test.dart",
    "tests/standalone/io/client_socket_destroy_no_error_test.dart",
    "tests/standalone/io/client_socket_exception_test.dart",
    "tests/standalone/io/compile_all_test.dart",
    "tests/standalone/io/console_unicode_test.dart",
    "tests/standalone/io/create_recursive_test.dart",
    "tests/standalone/io/dart_std_io_pipe_test.dart",
    "tests/standalone/io/datagram_error_test.dart",
    "tests/standalone/io/delete_symlink_test.dart",
    "tests/standalone/io/directory_chdir_test.dart",
    "tests/standalone/io/directory_create_race_test.dart",
    "tests/standalone/io/directory_delete_race_test.dart",
    "tests/standalone/io/directory_error_test.dart",
    "tests/standalone/io/directory_fuzz_test.dart",
    "tests/standalone/io/directory_list_nonexistent_test.dart",
    "tests/standalone/io/directory_list_pause_test.dart",
    "tests/standalone/io/directory_list_sync_test.dart",
    "tests/standalone/io/directory_non_ascii_sync_test.dart",
    "tests/standalone/io/directory_non_ascii_test.dart",
    "tests/standalone/io/directory_rename_test.dart",
    "tests/standalone/io/directory_test.dart",
    "tests/standalone/io/directory_uri_test.dart",
    "tests/standalone/io/disable_exit_test.dart",
    "tests/standalone/io/echo_server_stream_test.dart",
    "tests/standalone/io/empty_path_test.dart",
    "tests/standalone/io/empty_security_context_test.dart",
    "tests/standalone/io/exit_works_with_blocked_isolate_test.dart",
    "tests/standalone/io/file_absolute_path_test.dart",
    "tests/standalone/io/file_blocking_lock_test.dart",
    "tests/standalone/io/file_constructor_test.dart",
    "tests/standalone/io/file_copy_test.dart",
    "tests/standalone/io/file_create_test.dart",
    "tests/standalone/io/file_error2_test.dart",
    "tests/standalone/io/file_error_test.dart",
    "tests/standalone/io/file_fuzz_test.dart",
    "tests/standalone/io/file_input_stream_test.dart",
    "tests/standalone/io/file_leak_test.dart",
    "tests/standalone/io/file_lock_test.dart",
    "tests/standalone/io/file_long_path_test.dart",
    "tests/standalone/io/file_non_ascii_sync_test.dart",
    "tests/standalone/io/file_non_ascii_test.dart",
    "tests/standalone/io/file_output_stream_test.dart",
    "tests/standalone/io/file_pipe_test.dart",
    "tests/standalone/io/file_read_encoded_test.dart",
    "tests/standalone/io/file_read_special_device_test.dart",
    "tests/standalone/io/file_relative_long_path_test.dart",
    "tests/standalone/io/file_stat_test.dart",
    "tests/standalone/io/file_stream_test.dart",
    "tests/standalone/io/file_system_async_links_test.dart",
    "tests/standalone/io/file_system_delete_test.dart",
    "tests/standalone/io/file_system_exists_test.dart",
    "tests/standalone/io/file_system_links_test.dart",
    "tests/standalone/io/file_system_uri_test.dart",
    "tests/standalone/io/file_system_watcher_large_set_test.dart",
    "tests/standalone/io/file_system_watcher_test.dart",
    "tests/standalone/io/file_test.dart",
    "tests/standalone/io/file_typed_data_test.dart",
    "tests/standalone/io/file_uri_test.dart",
    "tests/standalone/io/file_windows_test.dart",
    "tests/standalone/io/file_write_as_test.dart",
    "tests/standalone/io/file_write_only_test.dart",
    "tests/standalone/io/gzip_format_exception_test.dart",
    "tests/standalone/io/http_100_continue_test.dart",
    "tests/standalone/io/http_10_test.dart",
    "tests/standalone/io/http_advanced_test.dart",
    "tests/standalone/io/http_auth_bearer_test.dart",
    "tests/standalone/io/http_auth_digest_test.dart",
    "tests/standalone/io/http_auth_test.dart",
    "tests/standalone/io/http_basic_test.dart",
    "tests/standalone/io/http_big_header_test.dart",
    "tests/standalone/io/http_bind_test.dart",
    "tests/standalone/io/http_client_connect_test.dart",
    "tests/standalone/io/http_client_exception_test.dart",
    "tests/standalone/io/http_client_parser_crlfs_tolerant_test.dart",
    "tests/standalone/io/http_client_request_test.dart",
    "tests/standalone/io/http_client_stays_alive_test.dart",
    "tests/standalone/io/http_close_stack_overflow_test.dart",
    "tests/standalone/io/http_close_test.dart",
    "tests/standalone/io/http_compression_test.dart",
    "tests/standalone/io/http_connection_close_test.dart",
    "tests/standalone/io/http_connection_factory_test.dart",
    "tests/standalone/io/http_connection_header_test.dart",
    "tests/standalone/io/http_connection_info_test.dart",
    "tests/standalone/io/http_content_length_test.dart",
    "tests/standalone/io/http_cookie_date_test.dart",
    "tests/standalone/io/http_cookie_test.dart",
    "tests/standalone/io/http_cross_process_test.dart",
    "tests/standalone/io/http_date_test.dart",
    "tests/standalone/io/http_detach_socket_test.dart",
    "tests/standalone/io/http_force_staggered_ipv6_lookup_test.dart",
    "tests/standalone/io/http_head_test.dart",
    "tests/standalone/io/http_headers_content_length_test.dart",
    "tests/standalone/io/http_headers_state_test.dart",
    "tests/standalone/io/http_headers_test.dart",
    "tests/standalone/io/http_ipv6_test.dart",
    "tests/standalone/io/http_keep_alive_test.dart",
    "tests/standalone/io/http_key_log_test.dart",
    "tests/standalone/io/http_linklocal_ipv6_test.dart",
    "tests/standalone/io/http_loopback_test.dart",
    "tests/standalone/io/http_no_reason_phrase_test.dart",
    "tests/standalone/io/http_on_unix_socket_test.dart",
    "tests/standalone/io/http_open_method_validate_test.dart",
    "tests/standalone/io/http_outgoing_size_test.dart",
    "tests/standalone/io/http_override_test.dart",
    "tests/standalone/io/http_parser_connect_method_test.dart",
    "tests/standalone/io/http_parser_header_add_test.dart",
    "tests/standalone/io/http_parser_test.dart",
    "tests/standalone/io/http_proxy_advanced_test.dart",
    "tests/standalone/io/http_proxy_close_test.dart",
    "tests/standalone/io/http_proxy_configuration_test.dart",
    "tests/standalone/io/http_proxy_test.dart",
    "tests/standalone/io/http_read_test.dart",
    "tests/standalone/io/http_request_pipelining_test.dart",
    "tests/standalone/io/http_requested_uri_test.dart",
    "tests/standalone/io/http_response_deadline_test.dart",
    "tests/standalone/io/http_reuse_server_port_test.dart",
    "tests/standalone/io/http_server_close_response_after_error_test.dart",
    "tests/standalone/io/http_server_early_client_close2_test.dart",
    "tests/standalone/io/http_server_early_client_close_test.dart",
    "tests/standalone/io/http_server_encoding_test.dart",
    "tests/standalone/io/http_server_idle_timeout_test.dart",
    "tests/standalone/io/http_server_response_test.dart",
    "tests/standalone/io/http_server_test.dart",
    "tests/standalone/io/http_session_test.dart",
    "tests/standalone/io/http_shutdown_test.dart",
    "tests/standalone/io/http_stream_close_test.dart",
    "tests/standalone/io/http_timeline_test.dart",
    "tests/standalone/io/https_bad_certificate_test.dart",
    "tests/standalone/io/https_client_certificate_test.dart",
    "tests/standalone/io/https_client_exception_test.dart",
    "tests/standalone/io/https_connection_closed_during_handshake_test.dart",
    "tests/standalone/io/https_nonblocking_trust_evaluation_test.dart",
    "tests/standalone/io/https_server_test.dart",
    "tests/standalone/io/https_unauthorized_test.dart",
    "tests/standalone/io/interface_address_test.dart",
    "tests/standalone/io/internet_address_test.dart",
    "tests/standalone/io/io_override_test.dart",
    "tests/standalone/io/io_sink_test.dart",
    "tests/standalone/io/issue_22636_test.dart",
    "tests/standalone/io/issue_22637_test.dart",
    "tests/standalone/io/issue_26954_test.dart",
    "tests/standalone/io/issue_27414_test.dart",
    "tests/standalone/io/issue_30687_test.dart",
    "tests/standalone/io/issue_31492_test.dart",
    "tests/standalone/io/issue_35112_test.dart",
    "tests/standalone/io/issue_39425_test.dart",
    "tests/standalone/io/large_file_read_small_file_test.dart",
    "tests/standalone/io/leak_io_service_test.dart",
    "tests/standalone/io/link_async_test.dart",
    "tests/standalone/io/link_test.dart",
    "tests/standalone/io/link_uri_test.dart",
    "tests/standalone/io/locale_name_test.dart",
    "tests/standalone/io/many_directory_operations_test.dart",
    "tests/standalone/io/many_file_operations_test.dart",
    "tests/standalone/io/many_pending_secure_sockets_test.dart",
    "tests/standalone/io/named_pipe_operations_test.dart",
    "tests/standalone/io/named_pipe_script_test.dart",
    "tests/standalone/io/named_pipe_type_test.dart",
    "tests/standalone/io/namespace_test.dart",
    "tests/standalone/io/network_interface_test.dart",
    "tests/standalone/io/non_utf8_directory_test.dart",
    "tests/standalone/io/non_utf8_file_test.dart",
    "tests/standalone/io/non_utf8_link_test.dart",
    "tests/standalone/io/non_utf8_output_test.dart",
    "tests/standalone/io/parent_test.dart",
    "tests/standalone/io/pipe_server_test.dart",
    "tests/standalone/io/platform_executable_test.dart",
    "tests/standalone/io/platform_locale_name_test.dart",
    "tests/standalone/io/platform_os_version_test.dart",
    "tests/standalone/io/platform_resolved_executable_test.dart",
    "tests/standalone/io/platform_test.dart",
    "tests/standalone/io/print_sync_test.dart",
    "tests/standalone/io/print_test.dart",
    "tests/standalone/io/process_broken_pipe_test.dart",
    "tests/standalone/io/process_check_arguments_test.dart",
    "tests/standalone/io/process_child_test.dart",
    "tests/standalone/io/process_detached_test.dart",
    "tests/standalone/io/process_environment_test.dart",
    "tests/standalone/io/process_exit_test.dart",
    "tests/standalone/io/process_info_test.dart",
    "tests/standalone/io/process_inherit_stdio_test.dart",
    "tests/standalone/io/process_kill_test.dart",
    "tests/standalone/io/process_non_ascii_test.dart",
    "tests/standalone/io/process_path_environment_test.dart",
    "tests/standalone/io/process_path_test.dart",
    "tests/standalone/io/process_pid_test.dart",
    "tests/standalone/io/process_run_output_test.dart",
    "tests/standalone/io/process_run_test.dart",
    "tests/standalone/io/process_segfault_test.dart",
    "tests/standalone/io/process_set_exit_code_test.dart",
    "tests/standalone/io/process_shell_test.dart",
    "tests/standalone/io/process_start_exception_test.dart",
    "tests/standalone/io/process_stderr_test.dart",
    "tests/standalone/io/process_stdin_transform_unsubscribe_test.dart",
    "tests/standalone/io/process_stdout_test.dart",
    "tests/standalone/io/process_sync_test.dart",
    "tests/standalone/io/process_working_directory_test.dart",
    "tests/standalone/io/raw_datagram_read_all_test.dart",
    "tests/standalone/io/raw_datagram_socket_test.dart",
    "tests/standalone/io/raw_datagram_zero_length_test.dart",
    "tests/standalone/io/raw_secure_server_closing_test.dart",
    "tests/standalone/io/raw_secure_server_socket_test.dart",
    "tests/standalone/io/raw_secure_socket_pause_test.dart",
    "tests/standalone/io/raw_secure_socket_ssl_read_error_test.dart",
    "tests/standalone/io/raw_secure_socket_test.dart",
    "tests/standalone/io/raw_server_socket_cancel_test.dart",
    "tests/standalone/io/raw_socket_cross_process_test.dart",
    "tests/standalone/io/raw_socket_test.dart",
    "tests/standalone/io/raw_socket_typed_data_test.dart",
    "tests/standalone/io/raw_socket_write_destroy_test.dart",
    "tests/standalone/io/raw_synchronous_socket_test.dart",
    "tests/standalone/io/read_into_const_list_test.dart",
    "tests/standalone/io/regress_10026_test.dart",
    "tests/standalone/io/regress_21160_test.dart",
    "tests/standalone/io/regress_21987_test.dart",
    "tests/standalone/io/regress_34885_test.dart",
    "tests/standalone/io/regress_50206_test.dart",
    "tests/standalone/io/regress_50904_test.dart",
    "tests/standalone/io/regress_54516_test.dart",
    "tests/standalone/io/regress_55886_test.dart",
    "tests/standalone/io/regress_56049_test.dart",
    "tests/standalone/io/regress_62037_test.dart",
    "tests/standalone/io/regress_62514_test.dart",
    "tests/standalone/io/regress_7191_test.dart",
    "tests/standalone/io/regress_7679_test.dart",
    "tests/standalone/io/regress_8828_test.dart",
    "tests/standalone/io/regress_9194_test.dart",
    "tests/standalone/io/regress_b_524683625_test.dart",
    "tests/standalone/io/regress_flutter_57125_test.dart",
    "tests/standalone/io/regress_sendmessage_overread_test.dart",
    "tests/standalone/io/regress_writefromsync_overread_test.dart",
    "tests/standalone/io/resolve_symbolic_links_test.dart",
    "tests/standalone/io/resource_handle_test.dart",
    "tests/standalone/io/secure_bad_certificate_test.dart",
    "tests/standalone/io/secure_builtin_roots_test.dart",
    "tests/standalone/io/secure_client_raw_server_test.dart",
    "tests/standalone/io/secure_client_server_test.dart",
    "tests/standalone/io/secure_key_log_test.dart",
    "tests/standalone/io/secure_multiple_client_server_test.dart",
    "tests/standalone/io/secure_server_client_certificate_test.dart",
    "tests/standalone/io/secure_server_closing_test.dart",
    "tests/standalone/io/secure_server_socket_test.dart",
    "tests/standalone/io/secure_session_resume_test.dart",
    "tests/standalone/io/secure_socket_allow_renegotiation_test.dart",
    "tests/standalone/io/secure_socket_alpn_test.dart",
    "tests/standalone/io/secure_socket_argument_test.dart",
    "tests/standalone/io/secure_socket_error_test.dart",
    "tests/standalone/io/secure_socket_minimum_tls_protocol_version_test.dart",
    "tests/standalone/io/secure_socket_test.dart",
    "tests/standalone/io/secure_unauthorized_test.dart",
    "tests/standalone/io/security_context_no_private_key_test.dart",
    "tests/standalone/io/server_socket_close_listen_test.dart",
    "tests/standalone/io/server_socket_exception_test.dart",
    "tests/standalone/io/server_socket_listen_close_test.dart",
    "tests/standalone/io/shared_socket_test.dart",
    "tests/standalone/io/signals_exception_test.dart",
    "tests/standalone/io/signals_test.dart",
    "tests/standalone/io/sleep_test.dart",
    "tests/standalone/io/snapshot_fail_test.dart",
    "tests/standalone/io/socket_arguments_test.dart",
    "tests/standalone/io/socket_big_chunk_test.dart",
    "tests/standalone/io/socket_bind_test.dart",
    "tests/standalone/io/socket_cancel_connect_test.dart",
    "tests/standalone/io/socket_close_test.dart",
    "tests/standalone/io/socket_connect_consume_close_test.dart",
    "tests/standalone/io/socket_connect_consume_write_close_test.dart",
    "tests/standalone/io/socket_connect_dwarf_stacktrace_test.dart",
    "tests/standalone/io/socket_connect_immediate_destroy_test.dart",
    "tests/standalone/io/socket_connect_stacktrace_test.dart",
    "tests/standalone/io/socket_connect_stream_close_test.dart",
    "tests/standalone/io/socket_connect_stream_data_close_cancel_test.dart",
    "tests/standalone/io/socket_connect_stream_data_close_test.dart",
    "tests/standalone/io/socket_connect_timeout_test.dart",
    "tests/standalone/io/socket_cross_process_test.dart",
    "tests/standalone/io/socket_finalizer_test.dart",
    "tests/standalone/io/socket_from_raw_path_test.dart",
    "tests/standalone/io/socket_hang_test.dart",
    "tests/standalone/io/socket_info_ipv4_test.dart",
    "tests/standalone/io/socket_info_ipv6_test.dart",
    "tests/standalone/io/socket_invalid_arguments_test.dart",
    "tests/standalone/io/socket_invalid_bind_test.dart",
    "tests/standalone/io/socket_ipv6_test.dart",
    "tests/standalone/io/socket_local_port_test.dart",
    "tests/standalone/io/socket_many_connections_test.dart",
    "tests/standalone/io/socket_port_test.dart",
    "tests/standalone/io/socket_sigpipe_test.dart",
    "tests/standalone/io/socket_simple_bind_test.dart",
    "tests/standalone/io/socket_source_address_test.dart",
    "tests/standalone/io/socket_udp_readwrite_test.dart",
    "tests/standalone/io/socket_upgrade_to_secure_test.dart",
    "tests/standalone/io/stdin_has_terminal_test.dart",
    "tests/standalone/io/stdin_sync_test.dart",
    "tests/standalone/io/stdio_implicit_close_test.dart",
    "tests/standalone/io/stdio_nonblocking_test.dart",
    "tests/standalone/io/stdio_socket_finalizer_test.dart",
    "tests/standalone/io/stdout_close_test.dart",
    "tests/standalone/io/stdout_stderr_non_blocking_test.dart",
    "tests/standalone/io/stdout_stderr_terminal_test.dart",
    "tests/standalone/io/stdout_stderr_test.dart",
    "tests/standalone/io/stream_pipe_test.dart",
    "tests/standalone/io/system_encoding_test.dart",
    "tests/standalone/io/unix_socket_regress_46634_test.dart",
    "tests/standalone/io/unix_socket_test.dart",
    "tests/standalone/io/unknown_host_test.dart",
    "tests/standalone/io/uri_platform_test.dart",
    "tests/standalone/io/web_socket_abnormal_close_test.dart",
    "tests/standalone/io/web_socket_compression_test.dart",
    "tests/standalone/io/web_socket_error_test.dart",
    "tests/standalone/io/web_socket_ping_test.dart",
    "tests/standalone/io/web_socket_pipe_test.dart",
    "tests/standalone/io/web_socket_protocol_processor_test.dart",
    "tests/standalone/io/web_socket_protocol_test.dart",
    "tests/standalone/io/web_socket_test.dart",
    "tests/standalone/io/web_socket_typed_data_test.dart",
    "tests/standalone/io/windows_environment_test.dart",
    "tests/standalone/io/windows_file_system_async_links_test.dart",
    "tests/standalone/io/windows_file_system_links_test.dart",
    "tests/standalone/io/windows_no_unnecessary_console_test.dart",
    "tests/standalone/io/zlib_test.dart",
  ]

  jit_test_sources = ffi_test_sources
  aot_test_sources = ffi_test_sources
  if (current_cpu == "x64") {
    jit_test_sources += io_test_sources
  } else {
    not_needed(io_test_sources)
  }

  test_deps = []
  test_resources = []
  foreach(test_source, jit_test_sources) {
    label = string_replace(test_source, "/", "_")
    application_snapshot(label) {
      dart_snapshot_kind = "kernel"
      main_dart = test_source
      training_args = []  # Not used
      output = "$target_out_dir/$test_source.dill"
    }
    test_deps += [ ":$label" ]
    test_resources += [
      {
        path = "$target_out_dir/$test_source.dill"
        dest = "data/$test_source"
      },
    ]
  }
  foreach(test_source, aot_test_sources) {
    label = string_replace(test_source, "/", "_") + "_aot"
    aot_snapshot(label) {
      main_dart = test_source
      output = "$target_out_dir/$test_source.elf"
    }
    test_deps += [ ":$label" ]
    test_resources += [
      {
        path = "$target_out_dir/$test_source.elf"
        dest = "data/$test_source.elf"
      },
    ]
  }

  test_binaries = [
    "dartvm",
    "dartaotruntime",
  ]

  foreach(binary, test_binaries) {
    fuchsia_component("${binary}_test_component") {
      manifest = "runtime/bin/${binary}_test_component.cml"
      data_deps = [
        "runtime/bin:${binary}",
        "runtime/bin:ffi_callback_stub_bin",
        "runtime/bin:ffi_test_dynamic_library",
        "runtime/bin:ffi_test_functions",
      ]
      library_files = [
        "libffi_test_dynamic_library.so",
        "libffi_test_functions.so",
      ]
      resource_files = [
        ".dart_tool/package_config.json",
        "tests/standalone/io/addlatexhash_test_src.tex",
        "tests/standalone/io/certificates/bad_server_chain.pem",
        "tests/standalone/io/certificates/bad_server_key.pem",
        "tests/standalone/io/certificates/client1.p12",
        "tests/standalone/io/certificates/client1.pem",
        "tests/standalone/io/certificates/client1_key.p12",
        "tests/standalone/io/certificates/client1_key.pem",
        "tests/standalone/io/certificates/client1_key_malformed.pem",
        "tests/standalone/io/certificates/client2.pem",
        "tests/standalone/io/certificates/client2_key.pem",
        "tests/standalone/io/certificates/client_authority.p12",
        "tests/standalone/io/certificates/client_authority.pem",
        "tests/standalone/io/certificates/client_authority_malformed.pem",
        "tests/standalone/io/certificates/server_chain.p12",
        "tests/standalone/io/certificates/server_chain.pem",
        "tests/standalone/io/certificates/server_chain_malformed1.pem",
        "tests/standalone/io/certificates/server_chain_malformed2.pem",
        "tests/standalone/io/certificates/server_key.p12",
        "tests/standalone/io/certificates/server_key.pem",
        "tests/standalone/io/certificates/server_trusted.pem",
        "tests/standalone/io/certificates/trusted_certs.p12",
        "tests/standalone/io/certificates/trusted_certs.pem",
        "tests/standalone/io/certificates/trusted_certs_malformed.pem",
        "tests/standalone/io/certificates/untrusted_server_chain.pem",
        "tests/standalone/io/certificates/untrusted_server_key.pem",
        "tests/standalone/io/create_sample_certificates.sh",
        "tests/standalone/io/empty_file",
        "tests/standalone/io/file_test.txt",
        "tests/standalone/io/fixed_length_file",
        "tests/standalone/io/fixed_length_file_out",
        "tests/standalone/io/localhost.crt",
        "tests/standalone/io/localhost.key",
        "tests/standalone/io/read_as_text.dat",
        "tests/standalone/io/readline_test1.dat",
        "tests/standalone/io/readline_test2.dat",
        "tests/standalone/io/readuntil_test.dat",
        "tests/standalone/io/sample_certificate_v3_extensions",
      ]
      resources = []
      foreach(file, library_files) {
        resources += [
          {
            path = root_out_dir + "/" + file
            dest = "lib/" + file
          },
        ]
      }
      resources += [
        {
          path = get_label_info("runtime/bin:ffi_callback_stub_bin",
                                "target_out_dir") + "/ffi_callback_stub.bin"
          dest = "lib/ffi_callback_stub.bin"
        },
      ]
      foreach(file, resource_files) {
        resources += [
          {
            path = file
            dest = "data/" + file
          },
        ]
      }
      deps = test_deps
      resources += test_resources

      # Should the GN SDK be doing this?
      if (current_cpu == "x64") {
        triple = "x86_64-unknown-fuchsia"
      } else if (current_cpu == "arm64") {
        triple = "aarch64-unknown-fuchsia"
      } else if (current_cpu == "riscv64") {
        triple = "riscv64-unknown-fuchsia"
      } else {
        assert(false, "What cpu?")
      }
      if (is_asan) {
        resources += [
          {
            path = "//third_party/fuchsia/sdk/linux/arch/$current_cpu/sysroot/dist/lib/asan/ld.so.1"
            dest = "lib/asan/ld.so.1"
          },
          {
            path = "//buildtools/linux-x64/clang/lib/clang/23/lib/$triple/libclang_rt.asan.so"
            dest = "lib/libclang_rt.asan.so"
          },
        ]
      } else if (is_ubsan) {
        resources += [
          {
            path = "//buildtools/linux-x64/clang/lib/clang/23/lib/$triple/libclang_rt.ubsan_standalone.so"
            dest = "lib/libclang_rt.ubsan_standalone.so"
          },
        ]
      } else {
        not_needed([ "triple" ])
      }
    }
  }

  fuchsia_package("fuchsia_test_package") {
    package_name = "dart_test"
    deps = []
    foreach(binary, test_binaries) {
      deps += [ ":${binary}_test_component" ]
    }
  }
}

if (is_linux && current_cpu != "riscv32") {
  group("debian_package") {
    public_deps = [ "tools/debian_package" ]
  }
}
